the header & main sections are updated

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
 
   <nav>
-    <div id="nav-logo"><img src="android-chrome-192x192.png"></div>
+    <div id="nav-logo"><img src="img\Nirrvana-full-logo-Color.jpg"></div>
     <div id="nav-container">
       <div class="nav-links">
         <div id="menu-bar" onclick="onClickMenu()">
@@ -85,9 +85,8 @@
         <div>
         <ul class="nav" id="nav">
           <li><a href="#Home">Home</a></li>
-          <li><a href="#Services">Services</a></li>
-          <li><a href="#WhyUs">Why Us</a></li>
-          <li><a href="#Portfolio">Portfolio</a></li>
+          <li><a href="#Services">About Us</a></li>
+          <li><a href="#Portfolio">Products</a></li>
           <li><a href="#Contact">Contact</a></li>
         </ul>
         </div>
@@ -96,14 +95,26 @@
     </div>
   </nav>
 
-  <section id="sm-handles">
-    <a href="https://www.facebook.com/AmritFabricsNirrvana" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
-    <a href="https://www.instagram.com/AmritFabricsNirrvana" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
-    <a href="https://twitter.com/AmritNirrvana" target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a>
-  </section>  
 
-  <header> It's used to wrap introductory information or navigation links for its parent tag and works well around content that's repeated at the top on multiple pages.</header>
-  <main>The main element is used to wrap (you guessed it) the main content, and there should be only one per page. It's meant to surround the information that's related to the central topic of your page. It's not meant to include items that repeat across pages, like navigation links or banners.</main>
+
+  <header> 
+    <h1 id="comp-name">Nirrvana Tex Mills</h1>
+    <h1 id="comp-desc">Manufacturer of Shirting Fabrics<br>Cotton, Lycra, Satin, Linen & Imported Fabrics </h1>
+  </header>
+  <main>
+      <section id="main-text">
+      <h2>Nirrvana Tex Mills is Cotton Shirting Fabrics Manufacturer from New Cloth Market, Ahmedabad.</h2>
+      <h3>
+        Other than cotton we also manufacture fabrics with Linen, Lycra, Viscose & also Imported fibers. 
+        We do all kinds of weaves like Satin, Twill, Dobby, etc... Our fabrics are extensively tested and 
+        are mill-grade.
+
+        We make high quality fabrics for the fashion industry in latest qualities, colors & designs under our brand <h2>Amrit Fabrics</h2>.</h3>
+      </section>
+      <section id="main-image" >
+        <img src="img\amrit-logo-color.jpg">
+      </section>
+  </main>
   <article>article is a sectioning element, and is used to wrap independent, self-contained content. The tag works well with blog entries, forum posts, or news articles.</article>
   <section>Defines a section of a document, such as header, footer etc.
     (or) An article is for standalone content, and a section is for grouping thematically related content. They can be used within each other, as needed. For example, if a book is the article, then each chapter is a section. When there's no relationship between groups of content, then use a div.
@@ -125,10 +136,14 @@
       </fieldset>
     </form>
 
+    <section id="sm-handles">
+      <a href="https://www.facebook.com/AmritFabricsNirrvana" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
+      <a href="https://www.instagram.com/AmritFabricsNirrvana" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
+      <a href="https://twitter.com/AmritNirrvana" target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a>
+    </section>  
     <a href="tel:+91-8780-486-592">Call us now</a>
     <a href="mailto:nirrvanatexmills@gmail.com">Connect with us over email.</a>
-    <h5>&copy; 2020 www.nirrvanatexmills.com</h5>  
-  
+    <h5>&copy; 2020 www.nirrvanatexmills.com</h5>    
   </footer>
 <!-- 
   <figure>
