--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <div>
         <ul class="nav" id="nav">
           <li><a href="#Home">Home</a></li>
-          <li><a href="#Services">About Us</a></li>
-          <li><a href="#Portfolio">Products</a></li>
+          <li><a href="#AboutUs">About Us</a></li>
+          <li><a href="#Products">Products</a></li>
           <li><a href="#Contact">Contact</a></li>
         </ul>
         </div>
@@ -97,13 +97,13 @@
 
 
 
-  <header> 
+  <header id="Home"> 
     <h1 id="comp-name">Nirrvana Tex Mills</h1>
     <h1 id="comp-desc">Manufacturer of Shirting Fabrics<br>Cotton, Lycra, Satin, Linen & Imported Fabrics </h1>
   </header>
-  <main>
+  <main id="Products">
       <section id="main-text">
-      <h2>Nirrvana Tex Mills is Cotton Shirting Fabrics Manufacturer from New Cloth Market, Ahmedabad.</h2>
+      <h2><em>Nirrvana Tex Mills is Cotton Shirting Fabrics Manufacturer from New Cloth Market, Ahmedabad.</em></h2>
       <h3>
         Other than cotton we also manufacture fabrics with Linen, Lycra, Viscose & also Imported fibers. 
         We do all kinds of weaves like Satin, Twill, Dobby, etc... Our fabrics are extensively tested and 
@@ -111,71 +111,47 @@
 
         We make high quality fabrics for the fashion industry in latest qualities, colors & designs under our brand <h2>Amrit Fabrics</h2>.</h3>
       </section>
-      <section id="main-image" >
-        <img src="img\amrit-logo-color.jpg">
-      </section>
+      <figure id="main-image" >
+        <img src="img\amrit-logo-color.jpg" alt="Amrit Brand logo of Nirrvana Tex Mills, Cotton Cloth Manufacturer from Ahmedabad Market">
+      </figure>
   </main>
-  <article>article is a sectioning element, and is used to wrap independent, self-contained content. The tag works well with blog entries, forum posts, or news articles.</article>
-  <section>Defines a section of a document, such as header, footer etc.
-    (or) An article is for standalone content, and a section is for grouping thematically related content. They can be used within each other, as needed. For example, if a book is the article, then each chapter is a section. When there's no relationship between groups of content, then use a div.
-  </section>
-  <footer>
-    <form>
+  <footer id="Contact">
+    <div id="form">
+    <form name="contact-us">
       <fieldset>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name">
-        <label for="Phone number">Phone number:</label>
-        <input type="tel" id="phone" name="phone">
-        <label for="email">e-mail:</label>
-        <input type="email" id="email" name="email">
-        <label for="message">Message:</label>
-        <input type="text" id="message" name="message">
-        <label for="address">Address:</label>
-        <input type="text" id="address" name="address">                
-        <input type="submit" value="Contact me">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name"><br>
+        <label for="Phone number">Phone number</label>
+        <input type="tel" id="phone" name="phone"><br>
+        <label for="email">e-mail</label>
+        <input type="email" id="email" name="email"><br>
+        <label for="message">Message</label>
+        <input type="text" id="message" name="message"><br>
+        <input type="text" id="address" name="address"><br>
+        <div id="submit-div">            
+          <input type="submit" id="submit" value="Contact me">
+        </div>
       </fieldset>
     </form>
-
-    <section id="sm-handles">
-      <a href="https://www.facebook.com/AmritFabricsNirrvana" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
-      <a href="https://www.instagram.com/AmritFabricsNirrvana" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
-      <a href="https://twitter.com/AmritNirrvana" target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a>
-    </section>  
-    <a href="tel:+91-8780-486-592">Call us now</a>
-    <a href="mailto:nirrvanatexmills@gmail.com">Connect with us over email.</a>
-    <h5>&copy; 2020 www.nirrvanatexmills.com</h5>    
+  </div>
+    <section id = "details">
+      <section id="sm-handles">
+        <a href="https://www.facebook.com/AmritFabricsNirrvana" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
+        <a href="https://www.instagram.com/AmritFabricsNirrvana" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
+        <a href="https://twitter.com/AmritNirrvana" target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a>
+      </section>
+      <br>  
+      <p>Call us: <a href="tel:+91-8780-486-592">+91-878048-6592</a><br></p>
+      <p>email us: <a href="mailto:nirrvanatexmills@gmail.com">nirrvanatexmills@gmail.com</a></p>
+    </section>
   </footer>
-<!-- 
-  <figure>
-    <img src="roundhouseDestruction.jpeg" alt="Photo of Camper Cat executing a roundhouse kick">
-    <br>
-    <figcaption>
-      Master Camper Cat demonstrates proper form of a roundhouse kick.
-    </figcaption>
-  </figure>
 
-  <figcaption>Defines a caption or legend for a figure.</figcaption>
-  <aside>Defines some content loosely related to the page content.</aside>
-  <details>	Represents a widget from which the user can obtain additional information or controls on-demand.</details>
-  <summary>Defines a summary for the <details> element.</summary>
-  <hgroup>Defines a group of headings.</hgroup>
-  <span>Defines an inline styleless section in a document.</span>
-  <code>Specifies text as computer code.</code>
-  <cite>Indicates a citation or reference to another source.</cite>
-  <dfn>Specifies a definition.</dfn>
-  <em>Specifies emphasized text.</em>
-  <mark>Represents text highlighted for reference purposes.</mark>
-  <output>Represents the result of a calculation.</output>
-  <progress>Represents the completion progress of a task.</progress>
-  <blockquote>Defines a long quotation.
-  <q>Defines a short inline quotation.</q>
-  <address>Specifies the author's contact information.
-  <acronym>Defines an acronym.
-  <abbr>Defines an abbreviated form of a longer word or phrase.
-   -->
+  <h5>&copy; 2020 www.nirrvanatexmills.com</h5>    
+
 <!-- Add your site or application content here -->
 <script src="normalize/vendor/modernizr-3.11.2.min.js"></script>
 <script src="normalize/plugins.js"></script>
+<script src="https://unpkg.com/unfetch/polyfill"></script>
 <script src="main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
