--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
   </div>
     <section id = "details">
       <section id="sm-handles">
-        <a href="https://www.facebook.com/AmritFabricsNirrvana" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Facebook]);” target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
-        <a href="https://www.instagram.com/AmritFabricsNirrvana" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Instagram]);” target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
-        <a href="https://twitter.com/AmritNirrvana" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Twitter]);” target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a>
+        <a href="https://www.facebook.com/AmritFabricsNirrvana" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Facebook]);" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
+        <a href="https://www.instagram.com/AmritFabricsNirrvana" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Instagram]);" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
+        <a href="https://twitter.com/AmritNirrvana" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Twitter]);" target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a>
       </section>
       <br>  
-      <p>Call us: <a href="tel:+91-8780-486-592" onclick="ga(‘send’, ‘event’, [Contact], [Click], [Phone No]);”>+91-878048-6592</a><br></p>
+      <p>Call us: <a href="tel:+91-8780-486-592" onclick="ga(‘send’, ‘event’, [Contact], [Click], [Phone No]);" >+91-878048-6592</a><br></p>
       <p>email us: <a href="mailto:nirrvanatexmills@gmail.com" onclick="ga(‘send’, ‘event’, [Contact], [Click], [email]);”>nirrvanatexmills@gmail.com</a></p>
     </section>
   </footer>
