double quotes corrected and analyticsjs being removed

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </section>
       <br>  
       <p>Call us: <a href="tel:+91-8780-486-592" onclick="ga(‘send’, ‘event’, [Contact], [Click], [Phone No]);" >+91-878048-6592</a><br></p>
-      <p>email us: <a href="mailto:nirrvanatexmills@gmail.com" onclick="ga(‘send’, ‘event’, [Contact], [Click], [email]);”>nirrvanatexmills@gmail.com</a></p>
+      <p>email us: <a href="mailto:nirrvanatexmills@gmail.com" onclick="ga(‘send’, ‘event’, [Contact], [Click], [email]);">nirrvanatexmills@gmail.com</a></p>
     </section>
   </footer>
 
@@ -155,11 +155,11 @@
 <script src="main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-<script>
+<!-- <script>
 window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
 ga('create', 'UA-175477296-1', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
 </script>
-<script src="https://www.google-analytics.com/analytics.js" async></script>
+<script src="https://www.google-analytics.com/analytics.js" async></script> -->
 </body>
 
 </html>
