analyticsjs added & gtagjs removed

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175477296-1"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175477296-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'UA-175477296-1');
-  </script>
+  </script> -->
 
   <title>Amrit Fabrics - Nirrvana Tex Mills</title>
   <meta name="description" content="Manufacturer of Textile Fabrics, mainly in cotton for the Fashion industry. Shirting, Suiting, Cotton, Printed, Dyed, Checks, Stripes, etc.... Fabrics">
@@ -155,11 +155,11 @@
 <script src="main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-<!-- <script>
+<script>
 window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
 ga('create', 'UA-175477296-1', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
 </script>
-<script src="https://www.google-analytics.com/analytics.js" async></script> -->
+<script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
