adding missing comma in fb

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <section id = "details">
       <section id="sm-handles">
         <!-- <a href="https://www.facebook.com/AmritFabricsNirrvana" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Facebook]);" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a> -->
-        <a href="https://www.facebook.com/AmritFabricsNirrvana" onclick="gtag(‘event’, 'FB-click' {'event_category' : 'Social Media', 'event_label' : 'Facebook Click'});" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
+        <a href="https://www.facebook.com/AmritFabricsNirrvana" onclick="gtag('event', 'FBclick', {'event_category' : 'Social Media', 'event_label' : 'Facebook Click'});" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
         <a href="https://www.instagram.com/AmritFabricsNirrvana" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Instagram]);" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
         <a href="https://twitter.com/AmritNirrvana" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Twitter]);" target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a>
       </section>
