google event tag addition & whasapp link addition

--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
   </div>
     <section id = "details">
       <section id="sm-handles">
-        <!-- <a href="https://www.facebook.com/AmritFabricsNirrvana" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Facebook]);" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a> -->
-        <a href="https://www.facebook.com/AmritFabricsNirrvana" onclick="gtag('event', 'FBclick', {'event_category' : 'Social Media', 'event_label' : 'Facebook Click'});" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
-        <a href="https://www.instagram.com/AmritFabricsNirrvana" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Instagram]);" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
-        <a href="https://twitter.com/AmritNirrvana" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Twitter]);" target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a>
+        <a href="https://www.facebook.com/AmritFabricsNirrvana" onclick="gtag('event', 'FB click', {'event_category' : 'Social Media', 'event_label' : 'Facebook Click'});" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
+        <a href="https://www.instagram.com/AmritFabricsNirrvana" onclick="gtag('event', 'Insta click', {'event_category' : 'Social Media', 'event_label' : 'Insta Click'});" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
+        <a href="https://wa.me/8780486592?text=Hello!%20I%20just%20visited%20your%20website.%20I%20am%20interested%20in%20seeing%20your%20range." onclick="gtag('event', 'WhatsApp click', {'event_category' : 'Social Media', 'event_label' : 'WhatsApp Click'});" target="_blank"><div id="whatsapp-link" class="sm-icon whatsapp"><img src="img\whatsapp.png"></div></a>
+        <!-- <a href="https://twitter.com/AmritNirrvana" onclick="gtag('event', 'Twit click', {'event_category' : 'Social Media', 'event_label' : 'Twitter Click'});" target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a> -->
       </section>
       <br>  
-      <p>Call us: <a href="tel:+91-8780-486-592" onclick="ga(‘send’, ‘event’, [Contact], [Click], [Phone No]);" >+91-878048-6592</a><br></p>
-      <p>email us: <a href="mailto:nirrvanatexmills@gmail.com" onclick="ga(‘send’, ‘event’, [Contact], [Click], [email]);">nirrvanatexmills@gmail.com</a></p>
+      <p>Call us: <a href="tel:+91-8780-486-592" onclick="gtag('event', 'Phone click', {'event_category' : 'Contact Us', 'event_label' : 'Phone Click'});" >+91-878048-6592</a><br></p>
+      <p>email us: <a href="mailto:nirrvanatexmills@gmail.com" onclick="gtag('event', 'email click', {'event_category' : 'Contact Us', 'event_label' : 'email Click'});">nirrvanatexmills@gmail.com</a></p>
     </section>
   </footer>
 
@@ -155,12 +155,6 @@
 <script src="https://unpkg.com/unfetch/polyfill"></script>
 <script src="main.js"></script>
 
-<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-<!-- <script>
-window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-ga('create', 'UA-175477296-1', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-</script>
-<script src="https://www.google-analytics.com/analytics.js" async></script> -->
 </body>
 
 </html>
